--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <p>
                 Suunnittelin ja toteutin projektin freelancerina uudelle startup
                 yritykselle. Progressiivinen web sovellus on toteutettu
-                Reactilla ja Firebase backendillä.
+                Reactilla ja Firebase backendillä käyttäen cloud funktioita.
               </p>
               <p>
                 Yrityksen nettisivut on tehty HTML ja Bootstrap yhdistelmällä.
@@ -117,7 +117,7 @@
                 <span class="badge bg-3">React</span>
                 <span class="badge bg-warning">Firebase</span>
                 <span class="badge bg-2">Bootstrap</span>
-                <span class="badge bg-1">Mapbox</span>
+                <span class="badge bg-black">Mapbox</span>
               </div>
             </div>
           </div>
