github link and contact

--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
         <h1 class="text-center">Samu Uunonen</h1>
       </div>
       <nav class="d-flex gap-3 gap-sm-3 flex-wrap mb-1">
-        <a href="#projects">Työhistoria</a>
         <a href="#projects">Projektit</a>
-        <a href="#projects">Yhtydenotto</a>
+        <a href="#contact">Ota yhteyttä</a>
       </nav>
     </header>
     <main>
@@ -50,10 +49,10 @@
               />
             </div>
             <div class="">
-              <h3>Kids & Friends web sovellus</h3>
+              <h3>Kids & Friends</h3>
               <p>
-                Web pohjainen maksullinen alusta missä perheet voivat
-                verkostoitua toistensa kanssa. Mahdollisuus lähettää ja hyväksyä
+                Maksullinen alusta sovellus missä perheet voivat verkostoitua
+                toistensa kanssa. Mahdollisuus lähettää ja hyväksyä
                 kaveripyyntöjä, lähettää yksityisviestejä ja ilmoittaa
                 paikkakunnan tapahtumia.
               </p>
@@ -63,27 +62,29 @@
                 Reactilla ja Firebase backendillä käyttäen cloud funktioita.
               </p>
               <p>
-                Yrityksen nettisivut on tehty HTML ja Bootstrap yhdistelmällä.
+                Yrityksen nettisivut on tehty HTML, CSS ja Bootstrap
+                yhdistelmällä.
               </p>
 
-              <div class="d-flex gap-1 mt-2 project-url">
+              <div class="d-flex gap-1 mt-2 aic">
                 <img src="assets/icons/link-45-deg.svg" alt="link icon" />
                 <a href="https://kidsandfriends.fi" target="_blank">
                   www.kidsandfriends.fi
                 </a>
               </div>
+
               <div class="d-flex gap-1 flex-wrap mt-2 mb-2">
-                <span class="badge bg-danger">JavaScript</span>
+                <span class="badge bg-red">JavaScript</span>
                 <span class="badge bg-3">React</span>
-                <span class="badge bg-warning">Firebase</span>
+                <span class="badge bg-yellow">Firebase</span>
                 <span class="badge bg-2">Bootstrap</span>
-                <span class="badge bg-1">Visma Pay</span>
-                <span class="badge bg-1">Fathom Analytics</span>
+                <span class="badge bg-black">Visma Pay</span>
+                <span class="badge bg-black">Fathom Analytics</span>
               </div>
             </div>
           </div>
 
-          <hr class="m-2">
+          <hr class="m-2" />
 
           <div class="d-flex flex-md-column-reverse gap-3">
             <div class="d-flex jcc">
@@ -106,20 +107,43 @@
                 projektin Reactilla ja käytin Firebasea backendinä.
               </p>
 
-              <div class="d-flex gap-1 mt-2 project-url">
-                <img src="assets/icons/link-45-deg.svg" alt="link icon" />
-                <a href="https://localsights.fi" target="_blank">
-                  www.localsights.fi
-                </a>
+              <div class="d-flex flex-column gap-1 mt-2">
+                <div class="d-flex gap-1">
+                  <img src="assets/icons/link-45-deg.svg" alt="link icon" />
+                  <a href="https://localsights.fi" target="_blank">
+                    www.localsights.fi
+                  </a>
+                </div>
+                <div class="d-flex gap-1 aic">
+                  <img src="assets/icons/github.svg" alt="github logo" />
+                  <a
+                    href="https://github.com/masterSamu/local-sights"
+                    target="_blank"
+                    class="text-middle"
+                  >
+                    Lähdekoodi
+                  </a>
+                </div>
               </div>
+
               <div class="d-flex gap-1 flex-wrap mt-2 mb-2">
-                <span class="badge bg-danger">JavaScript</span>
+                <span class="badge bg-red">JavaScript</span>
                 <span class="badge bg-3">React</span>
-                <span class="badge bg-warning">Firebase</span>
+                <span class="badge bg-yellow">Firebase</span>
                 <span class="badge bg-2">Bootstrap</span>
                 <span class="badge bg-black">Mapbox</span>
               </div>
             </div>
+          </div>
+        </section>
+
+        <section id="contact">
+          <div class="d-flex gap-2 aic">
+            <h2>Ota yhteyttä</h2>
+            <a href="https://www.linkedin.com/in/samu-uunonen/">
+              <img src="assets/icons/linkedin.svg" alt="linkedin logo">
+              <span class="d-none">LinkedIn profiili</span>
+          </a>
           </div>
         </section>
       </div>
