--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
             <div class="fs-3">
               <p>
                 Kehitän web sovelluksia ja nettisivuja. Kommunikoin selvällä
-                kielellä niin, että kaikki pysyvät kärryillä. Parhaimmat
-                työkaluni ovat React ja Firebase.
+                kielellä niin, että kaikki pysyvät kärryillä. Kirjoitan
+                sujuvasti JavaScriptiä ja parhaimmat työkaluni ovat React ja
+                Firebase.
               </p>
               <p>
                 Teen töitä entisen metsäammattilaisen työmoraalilla. Kanssani
