style updaets + to up butotn

--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta name="author" content="Samu Uunonen" />
     <meta
       name="keywords"
-      content="Web, fullstack-kehittäjä, web-kehittäjä, frontend-kehittäjä"
+      content="fullstack-kehittäjä, web-kehittäjä, frontend-kehittäjä, nettisivut, nettisivu, nettisovellus, nettisovellukset, nokia"
     />
     <meta
       name="description"
-      content="Asiakaslähtöinen web kehittäjä Nokialta. Puhun sovelluksista ja nettisivuista ihmisten kielellä. Teen web sovelluksia ja nettisivuja."
+      content="Asiakaslähtöinen web kehittäjä Nokialta. Puhun sovelluksista ja nettisivuista selkokielellä. Teen web sovelluksia ja nettisivuja."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Samu Uunonen | Web kehittäjä</title>
+    <title>Samu Uunonen | Web kehittäjä Nokialta</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header class="d-flex flex-column aic">
+    <header class="d-flex flex-column aic" id="top">
       <div>
         <h1 class="text-center">Samu Uunonen</h1>
       </div>
@@ -39,7 +39,7 @@
                 työskennellessä voi luottaa siihen, että sovitut työt tulee
                 valmiiksi ajallaan.
               </p>
-              <div class="d-flex gap-2 mt-2">
+              <div class="d-flex gap-2 mt-2 aic">
                 <p class="fs-3">Mut löytää</p>
                 <div>
                   <a
@@ -169,6 +169,20 @@
             </div>
           </div>
         </section>
+        <div class="d-flex flex-column aic jcc">
+          <a
+            href="#top"
+            class="text-black d-flex flex-column aic jcc text-decoration-none"
+          >
+            <img
+              src="assets/icons/arrow-up.svg"
+              height="30"
+              width="30"
+              alt="nuoli ylös"
+            />
+            <span class="fs-small">Takaisin ylös</span>
+          </a>
+        </div>
       </div>
     </main>
   </body>
