--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
             </div>
           </div>
 
+          <div>
+            <hr />
+          </div>
+
           <div class="d-flex flex-md-column-reverse gap-2">
             <div class="d-flex jcc">
               <img
@@ -167,6 +171,355 @@
                 <span class="badge bg-black">Mapbox</span>
               </div>
             </div>
+          </div>
+
+          <div>
+            <hr />
+          </div>
+
+          <div class="d-flex flex-md-column-reverse gap-2">
+            <div class="">
+              <h3>Bloglist</h3>
+              <p>
+                Fullstack MERN sovellus blogien listaamiseen. Käyttäjä voi
+                lisätä ja poistaa blogeja.
+              </p>
+              <p>
+                Projekti on tehty Fullstack Open 2022 kurssitehtävänä.
+                Tehtävässä oli tarkoituksena opetella kokonaisen MERN
+                sovelluksen tekemistä. Backend, FrontEnd ja E2E testausta
+                cypressillä.
+              </p>
+              <p>
+                <i
+                  >Valitettavasti tämä projekti ei ole käyttökunnossa Herokun
+                  muutosten vuoksi. Mutta lähdekoodia voi tarkastella
+                  Githubista.</i
+                >
+              </p>
+
+              <div class="d-flex flex-column gap-1 mt-2">
+                <div class="d-flex gap-1 aic">
+                  <img src="assets/icons/github.svg" alt="github logo" />
+                  <a
+                    href="https://github.com/masterSamu/Bloglist"
+                    target="_blank"
+                    class="text-middle"
+                  >
+                    Lähdekoodi
+                  </a>
+                </div>
+              </div>
+
+              <div class="d-flex gap-1 flex-wrap mt-2 mb-2">
+                <span class="badge bg-red">JavaScript</span>
+                <span class="badge bg-yellow">Node.js</span>
+                <span class="badge bg-3">React</span>
+                <span class="badge bg-black">Cypress</span>
+                <span class="badge bg-black">Heroku</span>
+                <span class="badge bg-black">Material UI</span>
+              </div>
+            </div>
+          </div>
+
+          <div>
+            <hr />
+          </div>
+
+          <div class="d-flex flex-md-column-reverse gap-2">
+            <div class="d-flex jcc">
+              <img
+                src="assets/twitterbot.PNG"
+                alt="Twitter botin feed"
+                height="325"
+                width="325"
+              />
+            </div>
+            <div class="">
+              <h3>Twitter botti</h3>
+              <p>
+                Botti mikä julkaisee Twitter päivityksen jokaisen Columbus Blue
+                Jacketsin pelin jälkeisenä aamuna ja kertoo Patrik Laineen
+                tilastot.
+              </p>
+              <p>
+                Projekti on luotu intohimosta NHL jääkiekkoon ja pienestä Laine
+                fanituksesta. Sovellus toimii siten, että Firebase Cloud funktio
+                käynnistyy joka päivä samaan aikaan ja hakee edellisen yön
+                tiedot Stats API :sta, ja julkaisee twiitin jos on tarve.
+              </p>
+              <p><i>Valitettavasti projekti ei ole enään toiminnassa.</i></p>
+
+              <div class="d-flex flex-column gap-1 mt-2">
+                <div class="d-flex gap-1 aic">
+                  <img src="assets/icons/github.svg" alt="github logo" />
+                  <a
+                    href="https://github.com/masterSamu/TwitterBot"
+                    target="_blank"
+                    class="text-middle"
+                  >
+                    Lähdekoodi
+                  </a>
+                </div>
+              </div>
+
+              <div class="d-flex gap-1 flex-wrap mt-2 mb-2">
+                <span class="badge bg-red">JavaScript</span>
+                <span class="badge bg-yellow">Firebase</span>
+                <span class="badge bg-black">Twitter API</span>
+                <span class="badge bg-black">Stats API</span>
+              </div>
+            </div>
+          </div>
+
+          <div>
+            <hr />
+          </div>
+
+          <div class="d-flex flex-md-column-reverse gap-2">
+            <div class="d-flex jcc">
+              <img
+                src="assets/firebase-crud.png"
+                alt="Firebase crud sovellus"
+                height="325"
+                width="325"
+              />
+            </div>
+            <div class="">
+              <h3>Firebase CRUD</h3>
+              <p>React sovellus jossa backendinä Firebase.</p>
+              <p>
+                Sovellukseen voi kirjautua sisään ja lisätä tuotteita. Sekä
+                muokata käyttäjätunnusta.
+              </p>
+              <p>
+                Projektin tarkoitus oli harjoitella Firebase backendin käyttöä
+                ja React Router Domia.
+              </p>
+
+              <div class="d-flex flex-column gap-1 mt-2">
+                <div class="d-flex gap-1">
+                  <img src="assets/icons/link-45-deg.svg" alt="link icon" />
+                  <a
+                    href="https://e-commerce-restaurant-427a7.web.app/"
+                    target="_blank"
+                  >
+                    https://e-commerce-restaurant-427a7.web.app/
+                  </a>
+                </div>
+                <div class="d-flex gap-1 aic">
+                  <img src="assets/icons/github.svg" alt="github logo" />
+                  <a
+                    href="https://github.com/masterSamu/firebase-crud-storage"
+                    target="_blank"
+                    class="text-middle"
+                  >
+                    Lähdekoodi
+                  </a>
+                </div>
+              </div>
+
+              <div class="d-flex gap-1 flex-wrap mt-2 mb-2">
+                <span class="badge bg-3">React</span>
+                <span class="badge bg-yellow">Firebase</span>
+                <span class="badge bg-2">Bootstrap</span>
+              </div>
+            </div>
+          </div>
+
+          <div>
+            <hr />
+          </div>
+
+          <div class="d-flex flex-md-column-reverse gap-2">
+            <div class="d-flex jcc">
+              <img
+                src="assets/personapp.png"
+                alt="Person app sovellus"
+                height="325"
+                width="325"
+              />
+            </div>
+            <div class="">
+              <h3>Person App</h3>
+              <p>
+                React sovellus jossa voi lisätä, muokata ja poistaa persoonia.
+              </p>
+              <p>Ensimmäinen TypeScript sovellukseni.</p>
+
+              <div class="d-flex flex-column gap-1 mt-2">
+                <div class="d-flex gap-1">
+                  <img src="assets/icons/link-45-deg.svg" alt="link icon" />
+                  <a href="https://personapp-d7fbc.web.app/" target="_blank">
+                    https://personapp-d7fbc.web.app/
+                  </a>
+                </div>
+                <div class="d-flex gap-1 aic">
+                  <img src="assets/icons/github.svg" alt="github logo" />
+                  <a
+                    href="https://github.com/masterSamu/personapp"
+                    target="_blank"
+                    class="text-middle"
+                  >
+                    Lähdekoodi
+                  </a>
+                </div>
+              </div>
+
+              <div class="d-flex gap-1 flex-wrap mt-2 mb-2">
+                <span class="badge bg-3">React</span>
+                <span class="badge bg-black">TypeScript</span>
+              </div>
+            </div>
+          </div>
+
+          <div>
+            <hr />
+          </div>
+
+          <div class="d-flex flex-md-column-reverse gap-2">
+            <div class="d-flex jcc">
+              <img
+                src="assets/bitcoin.png"
+                alt="Bitcoin historia sovellus"
+                height="325"
+                width="325"
+              />
+            </div>
+            <div class="">
+              <h3>Bitcoin historia</h3>
+              <p>React sovellus Bitcoinin historian tietojen tarkasteluun.</p>
+              <p>
+                Sovelluksesta voi tarkistaa parhaimman myyntipäivän ja
+                kaupankäynti volyymin.
+              </p>
+
+              <div class="d-flex flex-column gap-1 mt-2">
+                <div class="d-flex gap-1">
+                  <img src="assets/icons/link-45-deg.svg" alt="link icon" />
+                  <a
+                    href="https://mastersamu.github.io/bitcoin-app/"
+                    target="_blank"
+                  >
+                    https://mastersamu.github.io/bitcoin-app/
+                  </a>
+                </div>
+                <div class="d-flex gap-1 aic">
+                  <img src="assets/icons/github.svg" alt="github logo" />
+                  <a
+                    href="https://github.com/masterSamu/bitcoin-app"
+                    target="_blank"
+                    class="text-middle"
+                  >
+                    Lähdekoodi
+                  </a>
+                </div>
+              </div>
+
+              <div class="d-flex gap-1 flex-wrap mt-2 mb-2">
+                <span class="badge bg-red">JavaScript</span>
+                <span class="badge bg-3">React</span>
+                <span class="badge bg-black">Coinbase API</span>
+              </div>
+            </div>
+          </div>
+
+          <div>
+            <hr />
+          </div>
+
+          <div class="d-flex flex-md-column-reverse gap-2">
+            <div class="d-flex jcc">
+              <img
+                src="assets/blood.png"
+                alt="Verenluovutus sovellus"
+                height="325"
+                width="325"
+              />
+            </div>
+            <div class="">
+              <h3>Verenluovutus sovellus</h3>
+              <p>Koulun mobiiliohjelmointi kurssin projektityö.</p>
+              <p>
+                Sovelluksessa voi tallentaa oman veriryhmän ja tarkistaa mikä
+                kunkin veriryhmän tilanne on.
+              </p>
+              <p>
+                Oma roolini oli johtaa projektia, ja sen lisäksi tein sekä
+                backendin, että frontendin osaan jossa voi tallentaa oman
+                veriryhmän, sekä tarkistaa sen tilanteen.
+              </p>
+
+              <div class="d-flex flex-column gap-1 mt-2">
+                <div class="d-flex gap-1 aic">
+                  <img src="assets/icons/github.svg" alt="github logo" />
+                  <a
+                    href="https://github.com/masterSamu/blood-tracker"
+                    target="_blank"
+                    class="text-middle"
+                  >
+                    Lähdekoodi
+                  </a>
+                </div>
+              </div>
+
+              <div class="d-flex gap-1 flex-wrap mt-2 mb-2">
+                <span class="badge bg-red">JavaScript</span>
+                <span class="badge bg-3">ReactNative</span>
+                <span class="badge bg-black">Java REST</span>
+                <span class="badge bg-black">Google App Engine</span>
+                <span class="badge bg-black">MySQL</span>
+              </div>
+            </div>
+          </div>
+
+          <div>
+            <hr />
+          </div>
+
+          <div class="d-flex flex-md-column-reverse gap-2">
+            <div class="">
+              <h3>Tuotteiden varausjärjestelmä</h3>
+              <p>
+                Fullstack Java projekti toteutettu freelancerina
+                verkkokauppiaalle.
+              </p>
+              <p>
+                Sovelluksessa voi lisätä ja etsiä tuotevarauksia, toimittajan,
+                asiakkaan ja tuotteen perusteella. Näin kauppias pystyy helposti
+                tarkistamaan tuotteiden saavuttua, onko joku varannut sen.
+              </p>
+              <p>Sovellus on edelleen yrityksen päivittäisessä käytössä.</p>
+
+              <div class="d-flex flex-column gap-1 mt-2">
+                <div class="d-flex gap-1 aic">
+                  <img src="assets/icons/github.svg" alt="github logo" />
+                  <a
+                    href="https://github.com/masterSamu/bookingsystem"
+                    target="_blank"
+                    class="text-middle"
+                  >
+                    Lähdekoodi
+                  </a>
+                </div>
+              </div>
+
+              <div class="d-flex gap-1 flex-wrap mt-2 mb-2">
+                <span class="badge bg-black">Java</span>
+                <span class="badge bg-2">Bootstrap</span>
+                <span class="badge bg-red">JavaScript</span>
+                <span class="badge bg-black">JQuery</span>
+                <span class="badge bg-black">Google App Engine</span>
+                <span class="badge bg-black">MySQL</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="d-flex flex-column aic">
+            <p class="text-muted">Kiitos kun jaksoit tänne asti. 🙂</p>
+            <p class="text-muted">
+              Kun tarvitset tuotteen mikä toimii netissä, voin toteuttaa sen.
+            </p>
           </div>
         </section>
         <div class="d-flex flex-column aic jcc">
