--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
           <div class="d-flex flex-md-column-reverse gap-2">
             <div class="d-flex jcc">
               <img
-                src="assets/twitterbot.PNG"
+                src="assets/twitterbot.png"
                 alt="Twitter botin feed"
                 height="325"
                 width="325"
